# git-rust

./: Cargo.toml  README.md  your_program.sh
.codecrafters/: run.sh
src/: blob.rs  cli.rs  clone.rs  commit.rs  error.rs  lib.rs  main.rs  object.rs  pack.rs  remote.rs  tree.rs
src/builtin/: cat_file.rs  commit_tree.rs  hash_object.rs  init.rs  ls_tree.rs  write_tree.rs
src/data/: blob.rs  mod.rs  object.rs  tree.rs
src/pack/: access.rs  delta.rs  index.rs  mod.rs  parse.rs  stream.rs  types.rs  unpack.rs
src/remote/: discovery.rs  fetch_pack.rs  mod.rs  sideband.rs
